<resources>
    <string name="app_name">LocMess</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="link_signup">No account yet? Create one</string>
    <string name="btn_register">Create Account</string>
    <string name="btn_member">Already a member? Login</string>
    <string name="club">Topics of interest</string>
    <string name="locat">Location</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="gps">Gps Coordinates</string>
    <string name="radius">Radius</string>
    <string name="local">Location Name</string>
    <string name="local_gps">GPS</string>
    <string name="local_ssid">SSID</string>
    <string name="delete">Delete</string>
    <string name="btn_Gps">Get Gps Coordinates</string>
    <string name="btn_SSID">Get SSID Name</string>
    <string name="btn_SaveLoca">Save Location</string>
    <string name="btn_EditLoca">Save Edition</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_save_interest">Save Interest</string>
    <string name="btn_edit_password">Change Password</string>
    <string name="btn_edit_interests">Edit Interests</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="file_browser_title">Browse File</string>
    <string name="select_dir">Select Directory</string>
    <string name="no_file_selected">No file selected to transfer</string>
    <string name="client_send_file">Send</string>
    <string name="client_search">Search</string>
    <string name="browse_path_button">Browse</string>
    <string name="client_title">Send a File</string>
    <string name="menu_settings">Settings</string>
    <string name="wifi_direct">Wifi Direct</string>
    <string name="title_activity_file_browser">WiFi Direct File Transfer</string>
    <string name="title_activity_client">WiFi Direct File Transfer</string>
    <string name="port">10001</string>
    <string name="title">New Message Received!</string>
</resources>
