<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/localSSID_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true"
    tools:context="com.example.eduardo.locmess.AddSSIDLocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        android:weightSum="1">


        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="144dp"
            android:layout_weight="0.69" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_Scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/btn_SSID" />

        <TextView
            android:id="@+id/txtSSID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/local_ssid"
            android:textSize="16dip" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSaveSSID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/btn_SaveLoca" />

    </LinearLayout>

</ScrollView>
