<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_password_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true"
    tools:context="com.example.eduardo.locmess.AddInterestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/add_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/key" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/add_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add_interest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="6dp"
            android:padding="12dp"
            android:text="@string/btn_save_interest"
            android:onClick="addInterest"/>
    </LinearLayout>

</ScrollView>